--- a/_posts/2018-02-12-new-site.md
+++ b/_posts/2018-02-12-new-site.md
@@ -10,4 +10,4 @@ image: "https://source.unsplash.com/-uj3Y7r1BeM"
 categories: Test
 ---
 You've just caught a sneak preview on the new website. To return to the old site,
-go <a href='http://lifetabporterville.org/' class='btn btn-flat'>here.</a>
+go <a href='http://lifetabporterville.org/'>here.</a>
