--- a/_posts/2019-01-27-welcome.markdown
+++ b/_posts/2019-01-27-welcome.markdown
@@ -2,7 +2,8 @@
 title: Welcome to the new site!
 layout: post
 date: '2019-01-27 12:22:14 -0800'
-categories: update
+categories:
+- update
 ---
 
 This version of the website is currently under construction, mainly backend.
