Updated '_staff_members/gio1135.md' via CloudCannon

--- a/_staff_members/gio1135.md
+++ b/_staff_members/gio1135.md
@@ -1,6 +1,6 @@
 ---
 name: Giovanni Gallardo
-image: '{{ site.baseurl }}/uploads/gio1135.png'
+image: {{ site.baseurl }}/uploads/gio1135.png
 credentials: HTML, CSS, JS, Jekyll
 email: giogallardo117@gmail.com
 ---
